[gd_scene load_steps=6 format=3 uid="uid://b0kayv7rlhdfi"]

[ext_resource type="Script" path="res://Levels/PauseMenu/PauseMenu.gd" id="1_6s5d7"]
[ext_resource type="FontFile" uid="uid://yxjha0v2s8r2" path="res://Fonts/DangrekRegular.ttf" id="1_m5b63"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_clyhe"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
anti_aliasing_size = 0.1

[sub_resource type="FontVariation" id="FontVariation_l4hac"]
base_font = ExtResource("1_m5b63")
spacing_top = -4
spacing_bottom = -5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dh6k1"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
anti_aliasing_size = 0.1

[node name="PauseMenu" type="CanvasLayer" node_paths=PackedStringArray("black", "menu")]
process_mode = 3
script = ExtResource("1_6s5d7")
black = NodePath("Control/Black")
menu = NodePath("Control/Menu")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Black" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Menu" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 84
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 84
theme_override_constants/margin_bottom = 24

[node name="PanelContainer" type="PanelContainer" parent="Control/Menu"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_clyhe")

[node name="MarginContainer" type="MarginContainer" parent="Control/Menu/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Menu/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="Control/Menu/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("FontVariation_l4hac")
theme_override_font_sizes/font_size = 12
text = "PAUSED"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Menu/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 4

[node name="RestartLevel" type="Button" parent="Control/Menu/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
size_flags_vertical = 3
focus_mode = 0
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("FontVariation_l4hac")
theme_override_font_sizes/font_size = 8
theme_override_styles/focus = SubResource("StyleBoxFlat_clyhe")
theme_override_styles/disabled = SubResource("StyleBoxFlat_clyhe")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_clyhe")
theme_override_styles/hover = SubResource("StyleBoxFlat_dh6k1")
theme_override_styles/pressed = SubResource("StyleBoxFlat_clyhe")
theme_override_styles/normal = SubResource("StyleBoxFlat_clyhe")
text = "RESTART LEVEL"

[node name="PreviousLevel" type="Button" parent="Control/Menu/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
size_flags_vertical = 3
focus_mode = 0
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("FontVariation_l4hac")
theme_override_font_sizes/font_size = 8
theme_override_styles/focus = SubResource("StyleBoxFlat_clyhe")
theme_override_styles/disabled = SubResource("StyleBoxFlat_clyhe")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_clyhe")
theme_override_styles/hover = SubResource("StyleBoxFlat_dh6k1")
theme_override_styles/pressed = SubResource("StyleBoxFlat_clyhe")
theme_override_styles/normal = SubResource("StyleBoxFlat_clyhe")
text = "PREVIOUS LEVEL"

[node name="RestartGame" type="Button" parent="Control/Menu/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
size_flags_vertical = 3
focus_mode = 0
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("FontVariation_l4hac")
theme_override_font_sizes/font_size = 8
theme_override_styles/focus = SubResource("StyleBoxFlat_clyhe")
theme_override_styles/disabled = SubResource("StyleBoxFlat_clyhe")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_clyhe")
theme_override_styles/hover = SubResource("StyleBoxFlat_dh6k1")
theme_override_styles/pressed = SubResource("StyleBoxFlat_clyhe")
theme_override_styles/normal = SubResource("StyleBoxFlat_clyhe")
text = "RESTART GAME"

[connection signal="pressed" from="Control/Menu/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/RestartLevel" to="." method="_on_restart_level_pressed"]
[connection signal="pressed" from="Control/Menu/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/PreviousLevel" to="." method="_on_previous_level_pressed"]
[connection signal="pressed" from="Control/Menu/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/RestartGame" to="." method="_on_restart_game_pressed"]
